[package]
name = "dnsex"
version = "0.1.0"
authors = ["coigner <coigner@tuta.com>"]
edition = "2024"

[dependencies]
hickory-server = "0.24.0"
hickory-proto = "0.24.0"
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive"] }
hickory-client = "0.24.0"
hex = "0.4.3"
rand = "0.8.0"
