[package]
name = "dnsex"
version = "0.1.0"
authors = ["coigner <coigner@tuta.com>"]
edition = "2024"

[dependencies]
hickory-server = "0.24.0"
hickory-proto = "0.24.0"
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive"] }
hickory-client = "0.24.0"
rand = "0.8.0"
tar = "0.4.45"
flate2 = "1.1.9"
data-encoding = "2.10.0"
walkdir = "2.5.0"
